syntax = "proto3";

package emergency;

option java_package = "com.smartcity.emergency.grpc";
option java_multiple_files = true;
option java_outer_classname = "EmergencyProto";

// Service de gestion des urgences
service EmergencyService {
  // Créer une nouvelle alerte d'urgence
  rpc CreateEmergencyAlert (CreateEmergencyRequest) returns (EmergencyResponse);
  
  // Obtenir les détails d'une alerte
  rpc GetEmergencyAlert (GetEmergencyRequest) returns (EmergencyResponse);
  
  // Mettre à jour le statut d'une alerte
  rpc UpdateEmergencyStatus (UpdateEmergencyRequest) returns (EmergencyResponse);
  
  // Lister toutes les alertes actives
  rpc ListActiveEmergencies (ListEmergenciesRequest) returns (ListEmergenciesResponse);
  
  // Stream des alertes en temps réel (bidirectionnel)
  rpc StreamEmergencies (stream EmergencyStreamRequest) returns (stream EmergencyStreamResponse);
  
  // Assigner des ressources à une urgence
  rpc AssignResources (AssignResourcesRequest) returns (EmergencyResponse);
  
  // Obtenir les statistiques des urgences
  rpc GetEmergencyStats (StatsRequest) returns (StatsResponse);
}

// Types d'urgence
enum EmergencyType {
  UNKNOWN_EMERGENCY = 0;
  ACCIDENT = 1;
  FIRE = 2;
  MEDICAL = 3;
  SECURITY = 4;
  NATURAL_DISASTER = 5;
  TECHNICAL = 6;
}

// Niveaux de sévérité
enum SeverityLevel {
  LOW_SEVERITY = 0;
  MEDIUM_SEVERITY = 1;
  HIGH_SEVERITY = 2;
  CRITICAL_SEVERITY = 3;
}

// Statuts d'urgence
enum EmergencyStatus {
  REPORTED_STATUS = 0;
  CONFIRMED_STATUS = 1;
  IN_PROGRESS_STATUS = 2;
  RESOLVED_STATUS = 3;
  CANCELLED_STATUS = 4;
}

// Types de ressources
enum ResourceType {
  AMBULANCE_RESOURCE = 0;
  FIRE_TRUCK_RESOURCE = 1;
  POLICE_RESOURCE = 2;
  RESCUE_TEAM_RESOURCE = 3;
  HELICOPTER_RESOURCE = 4;
  DOCTOR_RESOURCE = 5;
  NURSE_RESOURCE = 6;
}

// Actions de stream
enum StreamAction {
  STREAM_CREATED = 0;
  STREAM_UPDATED = 1;
  STREAM_RESOLVED = 2;
}

// Requête pour créer une urgence
message CreateEmergencyRequest {
  string reporter_id = 1;
  EmergencyType emergency_type = 2;
  SeverityLevel severity = 3;
  string location = 4;
  double latitude = 5;
  double longitude = 6;
  string description = 7;
  int32 affected_people = 8;
  repeated string tags = 9;
}

// Requête pour obtenir une urgence
message GetEmergencyRequest {
  string emergency_id = 1;
}

// Requête pour mettre à jour le statut
message UpdateEmergencyRequest {
  string emergency_id = 1;
  EmergencyStatus status = 2;
  string responder_id = 3;
  string update_notes = 4;
}

// Requête pour lister les urgences
message ListEmergenciesRequest {
  EmergencyType type_filter = 1;
  SeverityLevel severity_filter = 2;
  EmergencyStatus status_filter = 3;
  string location_filter = 4;
}

// Requête pour assigner des ressources
message AssignResourcesRequest {
  string emergency_id = 1;
  repeated ResourceAssignment resources = 2;
}

// Assignation de ressource
message ResourceAssignment {
  ResourceType resource_type = 1;
  string resource_id = 2;
  int32 quantity = 3;
  int32 estimated_arrival_minutes = 4;
}

// Requête pour les statistiques
message StatsRequest {
  int32 hours_back = 1;
  string location_filter = 2;
}

// Requête/Réponse pour le streaming
message EmergencyStreamRequest {
  string client_id = 1;
  repeated EmergencyType subscribe_types = 2;
  repeated SeverityLevel subscribe_severities = 3;
}

message EmergencyStreamResponse {
  EmergencyResponse emergency = 1;
  StreamAction action = 2;
  string message = 3;
}

// Réponse d'urgence
message EmergencyResponse {
  string emergency_id = 1;
  string reporter_id = 2;
  EmergencyType emergency_type = 3;
  SeverityLevel severity = 4;
  string location = 5;
  double latitude = 6;
  double longitude = 7;
  string description = 8;
  int32 affected_people = 9;
  EmergencyStatus status = 10;
  string created_at = 11;
  string updated_at = 12;
  string responder_id = 13;
  repeated ResourceAssignment assigned_resources = 14;
  repeated string tags = 15;
  string update_notes = 16;
}

// Réponse de liste d'urgences
message ListEmergenciesResponse {
  repeated EmergencyResponse emergencies = 1;
  int32 total_count = 2;
}

// Réponse de statistiques
message StatsResponse {
  int32 total_emergencies = 1;
  int32 active_emergencies = 2;
  map<string, int32> emergencies_by_type = 3;
  map<string, int32> emergencies_by_severity = 4;
  map<string, int32> emergencies_by_status = 5;
  double average_response_time_minutes = 6;
  repeated string hotspots = 7;
  string period_covered = 8;
}